--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* basic style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header-img {
   width: 100%;
 }
-.header .more-inf {
+.more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -43,7 +43,7 @@ li, h3 {
 input,button{
   outline:none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -52,12 +52,12 @@ button {
   font-family: lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* heading */
-h3,
-label[for="new-task"] {
+.heading,
+.label-new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -66,7 +66,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -78,21 +78,21 @@ input[type="text"] {
   font-family: lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-text:focus {
   color: #333;
 }
 
 /* new task */
-label[for="new-task"] {
+.label-new-task {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -100,48 +100,46 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.input-checkbox {
   margin: 0 10px;
 }
-li > label {
+.label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.list-item > .input-text {
   width: 226px
 }
-button.delete img {
+.btn.delete .delete-img {
   height: 2em;
   transform: rotatez(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn.delete .delete-img:hover {
   transform: rotatez(0);
 }
 
 /* completed */
-ul#completed-tasks label {
+#completed-tasks .label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* edit task */
-ul li input[type="text"] {
+.list .list-item .input-text {
   display:none;
 }
 
-ul li.edit-mode input[type="text"] {
+.list .list-item.edit-mode .input-text {
   display:inline-block;
   width:224px;
 }
 
-ul li.edit-mode label {
+.list .list-item.edit-mode .label {
   display:none;
 }
