--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 /* basic style */
+
 .page {
   background-color: #f8f8f8;
   color: #333;
   font-family: lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header-img {
   width: 100%;
 }
+
 .more-inf {
   font-family: fantasy, cursive;
 }
@@ -22,29 +26,38 @@
     text-align: center; 
   }
 }
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .add-task-input {
   display: flex;
 }
+
 ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+
+li,
+h3 {
   list-style: none;
 }
-input,button{
+
+input,
+button {
   outline: none;
 }
+
 .btn {
   background: none;
   border: 0px;
@@ -54,10 +67,13 @@ input,button{
   font-family: lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* heading */
+
 .heading,
 .label-new-task {
   color: #333;
@@ -68,6 +84,7 @@ input,button{
   margin: 0;
   text-transform: uppercase;
 }
+
 .input-text {
   margin: 0;
   font-size: 18px;
@@ -80,20 +97,24 @@ input,button{
   font-family: lato, sans-serif;
   color: #888;
 }
+
 .input-text:focus {
   color: #333;
 }
 
 /* new task */
+
 .label-new-task {
   display: block;
   margin: 0 0 20px;
 }
+
 #new-task {
   width: 318px;
 }
 
 /* task list */
+
 .list-item {
   overflow: hidden;
   padding: 20px 0;
@@ -108,31 +129,37 @@ input,button{
 .input-checkbox {
   margin: 0 10px;
 }
+
 .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .list-item > .input-text {
   width: 226px;
 }
+
 .btn.delete .delete-img {
   height: 2em;
   transform: rotatez(45deg);
   transition: transform 200ms ease-in;
 }
+
 .btn.delete .delete-img:hover {
   transform: rotatez(0);
 }
 
 /* completed */
+
 #completed-tasks .label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* edit task */
+
 .list .list-item .input-text {
   display: none;
 }
