--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   text-align: right;
 }
 
-.header-img {
+.header__img {
   width: 100%;
 }
 
@@ -33,13 +33,14 @@
   margin: 0 auto 0;
 }
 
-.task {
+.label_task,
+.input-text_task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.add-task-input {
+.add-task__input-wrapper {
   display: flex;
 }
 
@@ -75,7 +76,7 @@ button {
 /* heading */
 
 .heading,
-.label-new-task {
+.add-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -104,7 +105,7 @@ button {
 
 /* new task */
 
-.label-new-task {
+.add-task__label {
   display: block;
   margin: 0 0 20px;
 }
@@ -115,7 +116,7 @@ button {
 
 /* task list */
 
-.list-item {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -126,7 +127,7 @@ button {
   vertical-align: middle;
 }
 
-.input-checkbox {
+.input__checkbox {
   margin: 0 10px;
 }
 
@@ -137,17 +138,17 @@ button {
   width: 226px;
 }
 
-.list-item > .input-text {
+.list__input-text {
   width: 226px;
 }
 
-.btn.delete .delete-img {
+.btn__img {
   height: 2em;
   transform: rotatez(45deg);
   transition: transform 200ms ease-in;
 }
 
-.btn.delete .delete-img:hover {
+.btn__img:hover {
   transform: rotatez(0);
 }
 
@@ -160,15 +161,15 @@ button {
 
 /* edit task */
 
-.list .list-item .input-text {
+.list .list__item .input-text {
   display: none;
 }
 
-.list .list-item.edit-mode .input-text {
+.list .list__item_edit .input-text {
   display: inline-block;
   width: 224px;
 }
 
-.list .list-item.edit-mode .label {
+.list .list__item_edit .label {
   display: none;
 }
